assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');


/*--------------------------------- colours*/
.bg-color-name-title {
    background-color: #c0c0c0;
}

.ui-menu-color-home {
    background-color: #eec102;
}

.ui-menu-color-projects {
    background-color: #64b244;
}

.ui-menu-color-contact {
    background-color: #d9492f;
}

.ui-menu-color-download {
    background-color: #638bfd;
}

/*--------------------------------- heading*/
header {
    margin: 0;
}

.heading {
    margin-left: 50px;
}

.logo {
    background: url("../images/parabimlogo-square.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
    min-height: 360px;
}

.name {
    font-family: "Exo", sans-serif;
    font-weight: 100;
    font-size: 46px;
    margin-top: 50px;
    color: #434343;
}

.title {
    font-family: "Roboto", sans-serif;
    font-weight: 200;
    font-size: 28px;
    margin-top: 20px;
    margin-bottom: 90px;
    color: #434343;
}

